Spacing fixes for mobile and desktop views.

--- a/css/style.css
+++ b/css/style.css
@@ -98,8 +98,17 @@ main {
     margin: 40px 10px;
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
+    /* width: 100%; */
+    color: #677A8E;
+    padding: 20px;
+    /* margin-right: 20px; */
+    flex: 3;
+    font-size: 12px;
 }
+
+/* next figure out how to
+1) make about me div not but up agains right
+2) make div not overflow in mobile */
 
 .subjectmain h3 {
     color: #071013;
@@ -107,14 +116,6 @@ main {
     padding-right: 30px;
     flex: 1;
     /* border-right: #071013 solid 2px; */
-}
-
-.subjectmain {
-    color: #677A8E;
-    font-size: 12px;
-    padding: 20px;
-    margin-right: 20px;
-    flex: 3;
 }
 
 .subjectmain div ul {
@@ -166,7 +167,7 @@ main {
 .samples {
     margin: 10px 10px;
     padding: 5px;
-    width: 70%;
+    /* width: 70%; */
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -244,6 +245,13 @@ main {
     flex: 3;
 }
 
+.details a {
+    color: #ffffff;
+    font-size: 12px;
+    margin: 0;
+    padding: 0;
+}
+
 /* footer styling */
 
 footer {
@@ -303,9 +311,19 @@ footer {
     }
 
     .subjectmain {
-        /* margin: 20px 10px; */
+        margin: 10px;
+        padding: 10px;
         flex-direction: column;
-        /* flex-wrap: wrap; */
+        /* display: block; */
+        display: inline-block;
+        /* flex: none; */
         /* width: 100%; */
+    }
+    #contact div {
+        flex: 1;
+    }
+
+    footer {
+        font-size: 12px;
     }
 }
